# hermes-ha-conversation-agent

./: .gitignore  AGENTS.md  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yml
custom_components/hermes_conversation/: __init__.py  client.py  config_flow.py  const.py  conversation.py  manifest.json  safety.py  strings.json
custom_components/hermes_conversation/translations/: en.json
docs/: advanced-configuration.md  architecture.md  hermes-responses-contract.md  installation-and-usage.md
docs/plans/: 2026-07-12-hermes-responses-contract.md  2026-07-12-initial-design.md
docs/superpowers/plans/: 2026-07-12-conversation-bridge.md
tests/: conftest.py  test_client.py  test_config_flow.py  test_conversation.py  test_hermes_contract.py  test_init.py  test_package_layout.py  test_safety.py
tools/: hermes_contract.py
