[project]
name = "hermes-ha-conversation-agent"
version = "0.0.0"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
    "hassil==3.8.1",
    "home-assistant-intents==2026.6.24",
    "homeassistant==2026.7.1",
    "mypy==1.18.2",
    "pytest>=9.0.2,<10",
    "pytest-homeassistant-custom-component==0.13.345",
    "pytest-socket>=0.8,<1",
    "ruff==0.12.12",
]

[tool.pytest.ini_options]
addopts = ["--disable-socket", "--allow-unix-socket"]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["custom_components", "tools", "tests"]
