[project]
name = "hermes-ha-conversation-agent"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pytest>=9.0.2,<10",
    "pytest-socket>=0.8,<1",
    "ruff==0.12.12",
]

[tool.pytest.ini_options]
addopts = ["--disable-socket"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["tools", "tests"]
